# portfolio2026

./: .gitignore
.atl/: skill-registry.md
.github/workflows/: ci.yml
backend/: .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  dev.py  main.py
backend/app/api/: __init__.py
backend/app/application/: chat.py
backend/app/domain/: content.py  retrieval.py
backend/tests/: test_application_chat.py  test_content_contract.py  test_dev.py  test_health.py  test_retrieval_domain.py
content/: rehash_content.py
content/v1/: content-contract-vectors.json  cv-source.json  portfolio.json  portfolio.schema.json  reviewed-manifest.json
frontend/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts
frontend/src/: index.html  styles.css
frontend/src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.spec.ts  app.ts
frontend/src/app/core/content/: content-validator.spec.ts  content-validator.ts  portfolio-content.spec.ts  portfolio-content.ts
frontend/src/app/core/routing/: navigation-error-handler.spec.ts  navigation-error-handler.ts
frontend/src/app/features/: portfolio-routes.spec.ts
frontend/src/app/features/chat/: chat-page.css  chat-page.ts
frontend/src/app/features/content-unavailable/: content-unavailable-page.ts
frontend/src/app/features/journey/: journey-page.css  journey-page.spec.ts  journey-page.ts
frontend/src/app/features/portfolio/: portfolio-page.css  portfolio-page.ts
openspec/: config.yaml
openspec/changes/initial-portfolio-mvp/: design.md  exploration.md  proposal.md  tasks.md
(+8 files in other folders)
