[project]
name = "portfolio-backend"
version = "0.1.0"
description = "FastAPI backend for Lucas Figueroa's portfolio."
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]

[tool.poetry]
packages = [{ include = "app" }]

[tool.poetry.group.dev.dependencies]
httpx = ">=0.28.1,<1.0.0"
mypy = ">=1.17.0,<2.0.0"
pytest = ">=8.4.0,<10.0.0"
pytest-asyncio = ">=1.1.0,<2.0.0"
ruff = ">=0.12.0,<1.0.0"
pypdf = ">=6.10.0,<7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["app"]

